--- a/translations/kangyur/translations/054-007_toh126-like_gold_dust.xml
+++ b/translations/kangyur/translations/054-007_toh126-like_gold_dust.xml
@@ -42,7 +42,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -69,8 +69,8 @@
                                         standard logic.</note>
                                 <date>2024-02-12</date>
                         </publicationStmt>
-                        <sourceDesc>
-                                <bibl key="toh126" type="text">
+                        <tei:sourceDesc xmlns:tei="http://www.tei-c.org/ns/1.0">
+                                <tei:bibl key="toh126" type="text">
                                         <ref>Toh 126</ref>
                                         <biblScope>Degé Kangyur vol. 54 (mdo sde, tha), folios
                                                 293.a–296.a</biblScope>
@@ -82,8 +82,8 @@
                                         </location>
                                         <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                                         <idno source-id="O1JC114941JC11701" work="W22084"/>
-                                </bibl>
-                        </sourceDesc>
+                                </tei:bibl>
+                        </tei:sourceDesc>
                         <notesStmt/>
                         <revisionDesc>
                                 <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-054-007-8">
@@ -176,6 +176,9 @@
                 <change who="#sameer" when="2024-02-12T09:41:07.949Z" type="text-version" status="1.0.0" xml:id="UT22084-054-007-177">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#andre" when="2024-02-22T16:05:28.092Z" type="text-version" status="1.0.1" xml:id="UT22084-054-007-178">
+                    <desc>Glossary integration revised, activated in CG</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -184,7 +187,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
                 <front>
-                        <div type="summary">
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary">
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT22084-054-007-59"/>
                                 <p tid="2">This sūtra presents a short dialogue between Ānanda and
@@ -204,8 +207,8 @@
                                         beings, he says, is as rare as finding a single grain of
                                         gold dust among all the sands of the ocean, or all the sands
                                         of the mighty river Gaṅgā.</p>
-                        </div>
-                        <div type="acknowledgment">
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment">
                                 <head type="acknowledgment" tid="4">Acknowledgements</head>
                                 <milestone unit="chunk" xml:id="UT22084-054-007-61"/>
                                 <p tid="5">A draft translation by Khenpo Kalsang Gyaltsen and
@@ -219,10 +222,10 @@
                                         Nathaniel Rich edited the translation and the introduction,
                                         and Ven. Konchog Norbu copyedited the text. Martina Cotter
                                         was in charge of the digital publication process.</p>
-                        </div>
-                        <div type="introduction">
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction">
                                 <head type="introduction" tid="9">Introduction</head>
-                                <div type="section" xml:id="UT22084-054-007-introduction-1">
+                                <tei:div type="section" xml:id="UT22084-054-007-introduction-1">
                                         <milestone unit="chunk" xml:id="UT22084-054-007-65"/>
                                         <p tid="11">The short Mahāyāna sūtra known as <title xml:lang="en">Like Gold Dust</title>
                         <note place="end" xml:id="UT22084-054-007-66"> The Stok
@@ -315,15 +318,15 @@
                                                 Comparative Edition (<title xml:lang="Bo-Ltn">dpe
                                                   bsdur ma</title>) and the Stok Palace Kangyur
                                                 version. </p>
-                                </div>
-                        </div>
+                                </tei:div>
+                        </tei:div>
                 </front>
                 <body>
-                        <div type="translation">
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation">
                                 <head type="translation"> The Translation </head>
                                 <head type="titleHon" tid="18">The Noble Mahāyāna Sūtra</head>
                                 <head type="titleMain" tid="19">Like Gold Dust</head>
-                                <div type="section" xml:id="UT22084-054-007-section-1">
+                                <tei:div type="section" xml:id="UT22084-054-007-section-1">
                                         <milestone unit="chunk" xml:id="UT22084-054-007-77"/>
                                         <p tid="23">
                         <ref cRef="F.293.a" type="folio" xml:id="UT22084-054-007-141"/> Homage to all
@@ -537,31 +540,31 @@
                                         <trailer tid="41">This concludes the noble Mahāyāna sūtra
                                                   “<title xml:lang="en">Like Gold
                                                 Dust</title>.”</trailer>
-                                </div>
-                                <div type="colophon" xml:id="UT22084-054-007-colophon">
+                                </tei:div>
+                                <tei:div type="colophon" xml:id="UT22084-054-007-colophon">
                                         <head type="colophon" tid="42">Colophon</head>
                                         <milestone unit="chunk" xml:id="UT22084-054-007-100"/>
                                         <p tid="43">Translated, edited, and finalized by the Indian
                                                 preceptors Surendrabodhi and Prajñāvarman, and the
                                                 chief editor-translator Bandé Yeshé Dé, and
                                                 others.</p>
-                                </div>
-                        </div>
+                                </tei:div>
+                        </tei:div>
                 </body>
                 <back>
-                        <div type="notes">
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes">
                                 <head type="notes" tid="44">Notes</head>
-                        </div>
-                        <div type="listBibl">
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl">
                                 <head type="listBibl" tid="46">Bibliography</head>
-                                <div type="section" xml:id="UT22084-054-007-listBibl-1">
+                                <tei:div type="section" xml:id="UT22084-054-007-listBibl-1">
                                         <head type="section" tid="47">Tibetan</head>
-                                        <bibl xml:id="UT22084-054-007-101">
+                                        <tei:bibl xml:id="UT22084-054-007-101">
                         <title xml:lang="Bo-Ltn">’phags pa gser gyi bye ma lta bu zhes bya ba theg
                                                   pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Ārya­suvarṇa­vālukopamā­nāma­mahāyāna­sūtra</title>).
                                                 Toh 126, Degé Kangyur vol. 54 (mdo sde, tha), folios
-                                                293.a–296.a.</bibl>
-                                        <bibl xml:id="UT22084-054-007-102">
+                                                293.a–296.a.</tei:bibl>
+                                        <tei:bibl xml:id="UT22084-054-007-102">
                         <title xml:lang="Bo-Ltn">’phags pa gser gyi bye ma lta bu zhes bya ba theg
                                                   pa chen po’i mdo</title>. bka’ ’gyur (dpe bsdur
                                                 ma) [Comparative Edition of the Kangyur], krung go’i
@@ -570,33 +573,33 @@
                                                 of the China Tibetology Research Center). 108
                                                 volumes. Beijing: krung go’i bod rig pa dpe skrun
                                                 khang (China Tibetology Publishing House),
-                                                2006–9, vol. 54, pp. 761–69.</bibl>
-                                        <bibl xml:id="UT22084-054-007-103">
+                                                2006–9, vol. 54, pp. 761–69.</tei:bibl>
+                                        <tei:bibl xml:id="UT22084-054-007-103">
                         <title xml:lang="Bo-Ltn">’phags pa gser gyi bye ma lta bu zhes bya ba theg
                                                   pa chen po’i mdo</title>. Stok Palace Kangyur vol.
-                                                57 (mdo sde, cha), folios 139.a–142.b.</bibl>
-                                        <bibl xml:id="UT22084-054-007-104">Denkarma (<title xml:lang="Bo-Ltn">pho brang stod thang ldan dkar
+                                                57 (mdo sde, cha), folios 139.a–142.b.</tei:bibl>
+                                        <tei:bibl xml:id="UT22084-054-007-104">Denkarma (<title xml:lang="Bo-Ltn">pho brang stod thang ldan dkar
                                                   gyi chos kyi ’gyur ro cog gi dkar chag</title>).
                                                 Toh 4364, Degé Tengyur vol. 206 (sna tshogs, jo),
-                                                folios 294.b–310.a.</bibl>
-                                        <bibl xml:id="UT22084-054-007-105">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ʼphang thang
+                                                folios 294.b–310.a.</tei:bibl>
+                                        <tei:bibl xml:id="UT22084-054-007-105">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ʼphang thang
                                                   ma</title>). Beijing: mi rigs dpe skrun khang,
-                                                2003.</bibl>
-                                </div>
-                                <div type="section" xml:id="UT22084-054-007-listBibl-2">
+                                                2003.</tei:bibl>
+                                </tei:div>
+                                <tei:div type="section" xml:id="UT22084-054-007-listBibl-2">
                                         <head type="section" tid="48">Western Languages</head>
-                                        <bibl xml:id="UT22084-054-007-106">Herrmann-Pfandt,
+                                        <tei:bibl xml:id="UT22084-054-007-106">Herrmann-Pfandt,
                                                   Adelheid. <title xml:lang="de">Die lHan kar ma:
                                                   ein früher Katalog der ins Tibetische übersetzten
                                                   buddhistischen Texte</title>. Vienna: Verlag der
                                                 österreichischen Akademie der Wissenschaften,
-                                                2008.</bibl>
-                                        <bibl xml:id="UT22084-054-007-107">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection
+                                                2008.</tei:bibl>
+                                        <tei:bibl xml:id="UT22084-054-007-107">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection
                                                   of Twenty-Five Sutras</title>. Somerville: Wisdom
-                                                Publications, 2021.</bibl>
-                                </div>
-                        </div>
-                        <div type="glossary" status="excluded">
+                                                Publications, 2021.</tei:bibl>
+                                </tei:div>
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-054-007-109">
@@ -608,7 +611,8 @@
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-054-007-110">
-                                                  <term type="translationMain">thus-gone </term>
+                                                  <term type="translationMain">thus-gone one</term>
+                                                  <term type="translationAlternative">thus-gone</term>
                                                   <term xml:lang="Bo-Ltn" n="1">de bzhin gshegs pa </term>
                                                   <term xml:lang="bo" n="1">དེ་བཞིན་གཤེགས་པ།</term>
                                                   <term xml:lang="Sa-Ltn">tathāgata</term>
@@ -655,20 +659,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-054-007-116">
-                                                  <term type="translationMain">league</term>
-                                                  <term xml:lang="Bo-Ltn" n="1">dpag tshad </term>
-                                                  <term xml:lang="bo" n="1">དཔག་ཚད།</term>
-                                                  <term xml:lang="Sa-Ltn">yojana</term>
-                                                  <note type="definition">
-                                                  <p>A measure of distance sometimes translated as
-                                                  “league,” but with varying definitions. The
-                                                  Sanskrit term denotes the distance yoked oxen can
-                                                  travel in a day or before needing to be unyoked.
-                                                  From different canonical sources the distance
-                                                  represented varies between four and ten miles.</p>
-                                                  </note>
-                                                </gloss>
+                        <gloss xml:id="UT22084-054-007-116" type="term" mode="match">
+                            <term type="translationMain">league</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">yojana</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dpag tshad</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">དཔག་ཚད།</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-054-007-117">
@@ -801,9 +797,10 @@
                                         <item>
                         <gloss type="person" xml:id="UT22084-054-007-130">
                                                   <term type="translationMain">Bandé Yeshé Dé</term>
+                                                  <term type="translationAlternative">Yeshé Dé</term>
                                                   <term xml:lang="Bo-Ltn" n="1">ban de ye shes sde </term>
                                                   <term xml:lang="bo" n="1">བན་དེ་ཡེ་ཤེས་སྡེ།</term>
-                                                  <term xml:lang="Sa-Ltn"/>
+                                                  
                                                 </gloss>
                     </item>
                                         <item>
@@ -882,7 +879,7 @@
                                                 </gloss>
                                         </item>
                                 </list>
-                        </div>
+                        </tei:div>
                 </back>
         </text>
 </TEI>
