--- a/translations/kangyur/placeholders/101-129_toh539d,1073-the_incantation_with_which_offerings_service%20and_homage_are_made.xml
+++ b/translations/kangyur/placeholders/101-129_toh539d,1073-the_incantation_with_which_offerings_service%20and_homage_are_made.xml
@@ -8,15 +8,16 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa rnams la mchod pa dang nye gnas dang zhabs la spyi bos phyag byas par 'gyur/ (°'gyur ba'i gzungs/)</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the fifth.]</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-382">Dylan Esler</author>
+                <author role="translatorMain" xml:id="UT22084-101-129-1"/>
+                <author role="translatorEng" xml:id="UT22084-101-129-2">Dylan Esler</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-101-129"/>
                 <date/>
             </publicationStmt>
@@ -25,7 +26,7 @@
                     <ref>Toh 539d</ref>
                     <biblScope>vol.88, ff.83v-83v(pp.166-166)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="88" start-page="166" end-page="166"/>
+                        <volume number="88" start-page="200" end-page="200"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="toh539d" work="http://read.84000.co/sections"/>
@@ -34,19 +35,33 @@
                     <ref>Toh 1073</ref>
                     <biblScope>vol.101, ff.239v-239v(pp.478-478)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="478" end-page="478"/>
+                        <volume number="102" start-page="478" end-page="478"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12837" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:14:26.672Z" user="admin">16/12/2022 10:14:26</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:13:53.567Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:13:53.567Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T10:14:20.963Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-101-129-3">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:13:53.567Z" type="translation-status" status="3" xml:id="UT22084-101-129-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:13:53.567Z" type="text-version" status="0.0.2" xml:id="UT22084-101-129-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:14:20.963Z" type="text-version" status="0.0.3" xml:id="UT22084-101-129-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-101-129-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T15:47:54.6Z" type="text-version" status="0.0.5" xml:id="UT22084-101-129-8">
+                    <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
