--- a/translations/kangyur/placeholders/100-021_toh539f,866-the_incantation_of_padmanetra.xml
+++ b/translations/kangyur/placeholders/100-021_toh539f,866-the_incantation_of_padmanetra.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-100-021-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -28,7 +28,7 @@
                     <ref>Toh 539f</ref>
                     <biblScope>vol.88, ff.83v-84r(pp.166-167)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="88" start-page="166" end-page="167"/>
+                        <volume number="88" start-page="200" end-page="201"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="toh539f" work="http://read.84000.co/sections"/>
@@ -37,7 +37,7 @@
                     <ref>Toh 866</ref>
                     <biblScope>vol.100, ff.88r-88v(pp.175-176)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="175" end-page="176"/>
+                        <volume number="101" start-page="173" end-page="174"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12628" work="W22084"/>
@@ -65,6 +65,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-02T13:49:44.729Z" type="text-version" status="0.0.5" xml:id="UT22084-100-021-9">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T15:51:10.395Z" type="text-version" status="0.0.6" xml:id="UT22084-100-021-10">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
