--- a/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
+++ b/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
@@ -5,22 +5,23 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Deliverance from the Eight Types of Fear</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭamahābhayatārānī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Aṣṭamahābhayatārānī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jigs brgyad sgrol ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭamahābhayatāraṇīnāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭamahābhayatārānīnāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">aṣṭamahābhayatāraṇī dhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamahābhayatāraṇīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamahābhayatārānīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Aṣṭamahābhayatāraṇī dhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jigs pa chen po brgyad las sgrol ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'jigs brgyad sgrol pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jigs pa chen po brgyad las sgrol pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <author role="translatorMain" xml:id="UT22084-088-036-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-036-2">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-036"/>
                 <date/>
             </publicationStmt>
@@ -29,7 +30,7 @@
                     <ref>Toh 541</ref>
                     <biblScope>vol.88, ff.84v-85r(pp.168-169)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="88" start-page="168" end-page="169"/>
+                        <volume number="88" start-page="202" end-page="203"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12265" work="W22084"/>
@@ -38,20 +39,36 @@
                     <ref>Toh 931</ref>
                     <biblScope>vol.100, ff.279v-280v(pp.558-560)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="100" start-page="558" end-page="560"/>
+                        <volume number="101" start-page="556" end-page="558"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12693" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T12:41:32.903Z" user="admin">05/04/2023 12:41:32</note>
-                <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:43:03.485Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:43:03.485Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-14T08:47:41.116Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-05T12:41:28.601Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-05T12:41:28.601Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-14T08:43:03.485Z" type="translation-status" status="3" xml:id="UT22084-088-036-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:43:03.485Z" type="text-version" status="0.0.1" xml:id="UT22084-088-036-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:47:41.116Z" type="text-version" status="0.0.2" xml:id="UT22084-088-036-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-05T12:41:28.601Z" type="translation-status" status="2.h" xml:id="UT22084-088-036-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-05T12:41:28.601Z" type="text-version" status="0.0.3" xml:id="UT22084-088-036-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-088-036-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T16:13:24.097Z" type="text-version" status="0.0.5" xml:id="UT22084-088-036-9">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
